# Pawsome-Adventure

./: .gitignore  CMakeLists.txt  Pawsome-Adventure.sln  README-cmake.md  README.md  README_cn.md
.github/workflows/: ci.yml
Pawsome-Adventure/: CMakeLists.txt  Pawsome-Adventure.vcxproj  Pawsome-Adventure.vcxproj.filters  README.md  animation.h  atlas.h  camera.h  client.cpp  config.h  path.h  player.h  server.cpp  timer.h  util.h  vector2.h
server/: server.ini  server.vcxproj  server.vcxproj.filters  text.txt
